<resources>
    <string name="app_name">APITest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_profile">Profile</string>
    <string name="category_arts">Arts and Entertainment</string>
    <string name="category_events">Events, Parties, and Weddings</string>
    <string name="category_food">Food and Drink</string>
    <string name="category_sports">Sport, Leisure, and Hobbies</string>
    <string name="title_activity_result">Result</string>
    <string name="email_address">Email Address</string>
    <string name="query">Query</string>
    <string name="location">Location</string>
    <string name="button_submit">Submit</string>
    <string name="action_settings">Settings</string>
</resources>
