<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.test.apitest.apitest.ResultActivity">
    <item android:id="@+id/action_profile" android:title="@string/action_profile"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/category_arts" android:title="@string/category_arts"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/category_events" android:title="@string/category_events"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/category_food" android:title="@string/category_food"
        android:orderInCategory="400" app:showAsAction="never" />
    <item android:id="@+id/category_sports" android:title="@string/category_sports"
        android:orderInCategory="500" app:showAsAction="never" />
</menu>
